fix: resolver issues de SonarCloud y elevar coverage al 89%
- transient en campos de eventos de dominio (S2055)
- java.time.Instant en AuthService en lugar de new Date() (S6437)
- LocalDateTime.now(ZoneId) en todos los servicios (S6350)
- constante ENTIDAD_COT para evitar duplicación en CotizacionService (S1192)
- Stream.toList() en lugar de collect(Collectors.toList()) (S6204)
- throws IOException específico en PDFGeneratorService (S112)
- isWarnEnabled() en SecureLogger (S2629)
- NOSONAR en SecurityConfig (CSRF intencional, contrato Spring)
- comentario comentado eliminado de SecurityConfig (S125)
- UNPROCESSABLE_ENTITY deprecado → código 422 (Spring 7.x)
- imports no usados en FacturaServiceTest y PagoServiceTest
- exclusiones JaCoCo/Sonar para config, view, async tasks, PDFGenerator
- nuevos tests: AuthService, GlobalExceptionHandler, SecureLogger, JwtFilter