@@ -16,9 +16,9 @@ import org.springframework.transaction.annotation.Transactional;
 import java.math.BigDecimal;
 import java.math.RoundingMode;
 import java.time.LocalDateTime;
+import java.time.ZoneId;
 import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @Transactional
@@ -31,6 +31,8 @@ public class CotizacionService {
     private final ApplicationEventPublisher eventPublisher;
     private final NumeroGenerator numeroGenerator;
     private final AppProperties appProperties;
+
+    private static final String ENTIDAD_COT = "COTIZACION";
 
     @Transactional(readOnly = true)
     public List<CotizacionResponse> listar(String usuario, Collection<String> roles) {
@@ -72,7 +74,7 @@ public class CotizacionService {
                 .subtotal(subtotal)
                 .impuesto(impuesto)
                 .total(total)
-                .creadoEn(LocalDateTime.now())
+                .creadoEn(LocalDateTime.now(ZoneId.systemDefault()))
                 .creadoPor(usuario)
                 .build();
 
@@ -81,7 +83,7 @@ public class CotizacionService {
 
         Cotizacion saved = cotizacionRepository.save(cotizacion);
         log.info("Cotización creada: {} por {}", numero, usuario);
-        registrarAudit(saved.getId(), "COTIZACION", "CREAR", usuario, "Número: " + numero);
+        registrarAudit(saved.getId(), ENTIDAD_COT, "CREAR", usuario, "Número: " + numero);
 
         return CotizacionSerializer.toResponse(saved);
     }
@@ -89,9 +91,9 @@ public class CotizacionService {
     public CotizacionResponse aprobar(Long id, String usuario) {
         Cotizacion cotizacion = buscarOFallar(id);
         transicionar(cotizacion, EstadoCotizacion.ACEPTADA);
-        cotizacion.setActualizadoEn(LocalDateTime.now());
+        cotizacion.setActualizadoEn(LocalDateTime.now(ZoneId.systemDefault()));
         cotizacionRepository.save(cotizacion);
-        registrarAudit(id, "COTIZACION", "APROBAR", usuario, cotizacion.getNumero());
+        registrarAudit(id, ENTIDAD_COT, "APROBAR", usuario, cotizacion.getNumero());
 
         eventPublisher.publishEvent(new CotizacionAprobadaEvent(this, cotizacion));
         log.info("Cotización {} aprobada por {}", cotizacion.getNumero(), usuario);
@@ -102,9 +104,9 @@ public class CotizacionService {
     public CotizacionResponse rechazar(Long id, String usuario) {
         Cotizacion cotizacion = buscarOFallar(id);
         transicionar(cotizacion, EstadoCotizacion.RECHAZADA);
-        cotizacion.setActualizadoEn(LocalDateTime.now());
+        cotizacion.setActualizadoEn(LocalDateTime.now(ZoneId.systemDefault()));
         cotizacionRepository.save(cotizacion);
-        registrarAudit(id, "COTIZACION", "RECHAZAR", usuario, cotizacion.getNumero());
+        registrarAudit(id, ENTIDAD_COT, "RECHAZAR", usuario, cotizacion.getNumero());
         log.info("Cotización {} rechazada por {}", cotizacion.getNumero(), usuario);
 
         return CotizacionSerializer.toResponse(cotizacion);
@@ -134,7 +136,7 @@ public class CotizacionService {
                     .precioUnitario(r.precioUnitario())
                     .subtotal(subtotalLinea)
                     .build();
-        }).collect(Collectors.toList());
+        }).toList();
     }
 
     private BigDecimal sumarSubtotales(List<LineaCotizacion> lineas) {
@@ -150,7 +152,7 @@ public class CotizacionService {
                 .accion(accion)
                 .usuario(usuario)
                 .detalle(detalle)
-                .timestamp(LocalDateTime.now())
+                .timestamp(LocalDateTime.now(ZoneId.systemDefault()))
                 .build());
     }
 }
